Fix horizonat scrollbars

--- a/app/css/popup.less
+++ b/app/css/popup.less
@@ -48,7 +48,7 @@
 }
 
 ::-webkit-scrollbar {
-  height: 16px;
+  height: 13px;
   overflow: visible;
   width: 13px;
 }
